Import of ALEXIOB/Tk-Text-SuperText-0.8.1 from CPAN.
gitpan-cpan-distribution: Tk-Text-SuperText
gitpan-cpan-version:      0.8.1
gitpan-cpan-path:         ALEXIOB/Tk-Text-SuperText-0.8.1.tar.gz
gitpan-cpan-author:       ALEXIOB
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -7,6 +7,8 @@ DESCRIPTION
 	commands binded via virtual events.
 
 AUTHOR
+	Send comments,suggestions,flames :) to:
+	
 	Alessandro Iob <alexiob@iname.com>
 	
 COPYRIGHT
@@ -30,7 +32,11 @@ HOW TO BUILD AND INSTALL
 	
 CHANGES
 
-	This is the first public release.
+0.8.1	-	Adjusted '-foreground' bug;
+			Added jumptToMatchingChar method;
+			Made all bind subs available as public methods;
+			
+0.8	-	This is the first public release.
 	
 TODO
 
