Import of ALEXIOB/Tk-Text-SuperText-0.8.2 from CPAN.
gitpan-cpan-distribution: Tk-Text-SuperText
gitpan-cpan-version:      0.8.2
gitpan-cpan-path:         ALEXIOB/Tk-Text-SuperText-0.8.2.tar.gz
gitpan-cpan-author:       ALEXIOB
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -32,6 +32,8 @@ HOW TO BUILD AND INSTALL
 	
 CHANGES
 
+0.8.2	-	Corrected stupid bugs and typos
+
 0.8.1	-	Adjusted '-foreground' bug;
 			Added jumptToMatchingChar method;
 			Made all bind subs available as public methods;
