Import of ALEXIOB/Tk-Text-SuperText-0.9.1 from CPAN.
gitpan-cpan-distribution: Tk-Text-SuperText
gitpan-cpan-version:      0.9.1
gitpan-cpan-path:         ALEXIOB/Tk-Text-SuperText-0.9.1.tar.gz
gitpan-cpan-author:       ALEXIOB
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -32,6 +32,8 @@ HOW TO BUILD AND INSTALL
 	
 CHANGES
 
+0.9.1	-	Fixed backward matching char search bug.
+
 0.9	-	Removed all known bugs,
 			Speed up of parentheses matching and block shift.
 			Now it should be really usefull ;)
