--- a/README
+++ b/README
@@ -32,6 +32,11 @@ HOW TO BUILD AND INSTALL
 	
 CHANGES
 
+0.9.3	-	Windows backspace bug fixed (thanks to Jim Turner).
+			"\" matching char bug fixed
+
+0.9.2	-	Tk800 bug Fixed.
+
 0.9.1	-	Fixed backward matching char search bug.
 
 0.9	-	Removed all known bugs,
